# cBlocky

./: .gitignore  CMakeLists.txt  README.md  setup.sh
res/: fragment.glsl  fragment_es.glsl  vertex.glsl  vertex_es.glsl
src/: block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  game.c  game.h  global.h  main.c  mesh.c  mesh.h  ray.c  ray.h  screen.c  screen.h  shader.c  shader.h  states.h  texture.c  texture.h  types.h  world.c  world.h
